[gd_scene load_steps=12 format=3 uid="uid://bua2knj78df8k"]

[ext_resource type="Script" uid="uid://brmutuyti621x" path="res://scenes/cenários/quarto_avo/scripts/quarto_avo.gd" id="1_moa3x"]
[ext_resource type="PackedScene" uid="uid://bct6pd7l1iui0" path="res://scenes/ui/ui.tscn" id="1_vs0mt"]
[ext_resource type="Resource" uid="uid://dtway21w3mdw3" path="res://inventory/playerinv.tres" id="2_hurv0"]
[ext_resource type="Texture2D" uid="uid://5g1jxfabg80h" path="res://scenes/cenários/quarto_avo/sprites/quarto avo (1).jpg" id="4_cmsr1"]
[ext_resource type="Texture2D" uid="uid://vkd65jqccigy" path="res://scenes/ui/sprites/botao seta baixo.png" id="4_kjpyn"]
[ext_resource type="FontFile" uid="uid://droskw7yhnkiv" path="res://fonts/Timeless.ttf" id="5_6tbgq"]
[ext_resource type="FontFile" uid="uid://bxc233e1vrt5q" path="res://fonts/Timeless-Bold.ttf" id="6_xmi4h"]
[ext_resource type="Script" uid="uid://1idp3tp8lgdh" path="res://inventory/items/tumor.gd" id="7_kjpyn"]
[ext_resource type="Resource" uid="uid://ebks6ljtud7h" path="res://inventory/items/tumor.tres" id="8_6tbgq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l35e8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_xmi4h"]
radius = 66.1287

[node name="QuartoAvo" type="Node2D"]
script = ExtResource("1_moa3x")
inv = ExtResource("2_hurv0")

[node name="UI" parent="." instance=ExtResource("1_vs0mt")]

[node name="TextureButton" type="TextureButton" parent="UI"]
z_index = 5
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -426.0
offset_right = 52.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_kjpyn")
ignore_texture_size = true
stretch_mode = 0

[node name="TextBox" type="Panel" parent="UI"]
visible = false
z_index = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 538.0
offset_top = -255.0
offset_right = -295.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_l35e8")

[node name="Label" type="RichTextLabel" parent="UI/TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_fonts/normal_font = ExtResource("5_6tbgq")
theme_override_fonts/bold_font = ExtResource("6_xmi4h")
theme_override_font_sizes/normal_font_size = 45
theme_override_font_sizes/bold_font_size = 45
bbcode_enabled = true
text = "texto vai aqui"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 292.0
offset_top = 95.0
offset_right = 1628.0
offset_bottom = 781.0
texture = ExtResource("4_cmsr1")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.982175, 0.884682, 0.85272, 1)

[node name="tumor" type="Area2D" parent="."]
position = Vector2(1241, 557)
script = ExtResource("7_kjpyn")
item = ExtResource("8_6tbgq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tumor"]
shape = SubResource("CircleShape2D_xmi4h")

[connection signal="mouse_entered" from="UI/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="UI/TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="UI/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="input_event" from="tumor" to="tumor" method="_on_input_event"]
[connection signal="mouse_entered" from="tumor" to="tumor" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="tumor" to="tumor" method="_on_mouse_exited"]
